# fastapi-sqlalchemy

./: README.md  example.db  pyproject.toml
app/: db.py
app/api/: main.py
app/api/notes/: schema.py  use_cases.py  views.py
app/models/: __init__.py  base.py  notes.py  schema.py
